--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "SANS";
+  src: url("./assets/fonts/DMSans-Regular.ttf") format("ttf");
+}
+@font-face {
+  font-family: "SANS-REGULAR";
+  font-weight: 400;
+  src: url("./assets/fonts/DMSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "SANS-MEDIUM";
+  font-weight: 700;
+  src: url("./assets/fonts/DMSans-Medium.ttf");
+}
+
+@font-face {
+  font-family: "SANS-BOLD";
+  font-weight: 900;
+  src: url("./assets/fonts/DMSans-Bold.ttf");
+}
+@font-face {
+  font-family: "Merri";
+  font-weight: 400;
+  src: url("./assets/fonts/Merriweather-Regular.ttf");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "SANS-REGULAR";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
